--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <div class="leg f r"></div>
   <div class="tail"></div>
 </div>
-<div class="well"><a class="home-btn" href="https://codepen.io/vineethtrv">Go Home</a></div>
+<div class="well"><a class="home-btn" href="https://www.instagram.com/bros.projects/">Go Home</a></div>
 <div class="text-box">
   <h1>401</h1>
   <p>Sorry, You don't have access there...</p>
